# Ship

./: .deepsource.toml  .env  .envrc  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Entitlements.plist  Info.plist  LICENSE  biome.json  build.rs  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tauri.conf.json  tree  tsconfig.json
.cargo/: config.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: build_client.yml  codeql.yml
capabilities/: default.json
icons/: icon.icns
src/: lib.rs  main.rs
src/api/: account.rs  connection.rs  device.rs  status.rs  voice.rs
src/api/account/: account.rs  account_db.rs  account_service.rs  error.rs  mod.rs  types.rs
src/api/connection/: connection.rs  endpoint.rs  mod.rs
src/api/device/: db.rs  device.rs  group.rs  handler.rs  helper.rs  mls_client.rs  mod.rs
src/api/device/connection/: endpoint.rs  group_connection.rs  mod.rs
src/api/device/types/: config.rs  errors.rs  event.rs  group.rs  identity_keypair.rs  message.rs  message_builder.rs  mod.rs  signature_bytes.rs
src/api/device/types/custom_mls/: credentials.rs  identity.rs  mod.rs  rules.rs
src/api/device/types/extensions/: group_config.rs  mod.rs  roster.rs
src/api/device/types/extensions/group_config/: group_config.rs  group_config_builder.rs  group_extension.rs  mod.rs
src/api/status/: error.rs  mod.rs  types.rs  user_db.rs  user_status.rs
src/api/status/connection/: mod.rs  user_connection.rs
src/api/voice/: error.rs  grpc_generated.rs  mod.rs  types.rs  voice_handler.rs  voice_user.rs
src/api/voice/connection/: mod.rs  voice_connection.rs
src/api/voice/types/: basic_types.rs  client_messages.rs  codec_types.rs  message_types.rs  mod.rs
src/api/voice/types/ratchet_key/: config.rs  constants.rs  epoch_keys.rs  error.rs  manager.rs  mod.rs  receiver.rs  sender.rs
src/commands/: auth.rs  chat.rs  events.rs  group.rs  mod.rs  user.rs  utils.rs  voice.rs
ui/: MESSENGER_ARCHITECTURE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  next.config.js  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
ui/app/: globals.css  hero.ts  layout.tsx  page.tsx
ui/app/themes/: default.css  terminal.css
ui/components/: Auth.tsx  AuthTransition.tsx  ChatWindow.tsx  Header.tsx  ImageViewer.tsx  InputBar.tsx  LeftSidebar.tsx  RightPanel.tsx  ThemeProvider.tsx  ThemeSelector.tsx  auth-transition.css  hero_var.txt
ui/components/auth/: AccountSelection.tsx  LoginForm.tsx  QRCodeModal.tsx  RegisterForm.tsx  index.tsx
ui/components/chat_window/: Color.tsx  MessageRender.tsx  SearchBar.tsx
ui/components/context_menu/: ContextMenu.tsx  GroupContextMenu.tsx  InputBarContextMenu.tsx  UserContextMenu.tsx
ui/components/dialog/: CreateChatDialog.tsx  GroupDialog.tsx  InviteUserModal.tsx  PermissionsModal.tsx
ui/components/drop_down/: AccountDropdown.tsx
ui/components/landscape/: LandscapeBackground.tsx  index.ts  landscape-background.css
ui/components/messenger/: .TopBar.tsx.swp  ChatArea.tsx  ChatListItem.tsx  ContactsMenu.tsx  CreateGroupModal.tsx  InputBar.tsx  LeftSidebar.tsx  MainMenu.tsx  MessageItem.tsx  RightSidebar.tsx  SettingsModal.tsx  TopBar.tsx  index.ts  messenger.css
ui/components/settings/: AccountSettings.tsx  CreateGroupModal.tsx  ExportAccountModal.tsx  GroupSettingsModal.tsx  ImageCropModal.tsx  InviteMemberModal.tsx  Settings.tsx  SettingsModal.tsx
ui/components/settings/SettingsModal/: AccountPanel.tsx  AppearancePanel.tsx  DevicesPanel.tsx  NotificationsPanel.tsx  SecurityPanel.tsx  StoragePanel.tsx  index.tsx
ui/components/voice/: VoiceCallModal.tsx
ui/components/voice/components/: CallStatusBadge.tsx  InfoPanel.tsx  JoinOrCreateView.tsx  LocalMedia.tsx  LogDisplay.tsx  ParticipantGrid.tsx  ParticipantTile.tsx  RemoteMedia.tsx  ScreenShareDisplay.tsx  VoiceChannelModal.tsx  VoiceControlBar.tsx  WebRTCChat.tsx  index.ts  types.tsx
ui/components/voice/services/: GrpcSignalingAdapter.ts  MediaDeviceDetector.ts  MediaManager.ts  MediasoupService.ts  MicrophoneController.ts  WebRTCConnectionManager.ts
ui/components/voice/types/: mediasoup.d.ts  mediasoup.ts  webrtc.d.ts
ui/components/voice/utils/: codecTypes.ts  encodedStreamsTransform.ts
ui/components/voice/workers/: decryptionWorker.worker.js  encodedStreamWorker.worker.js  encryptionWorker.worker.js
ui/hooks/: Auth.tsx  Chat.tsx  Contacts.tsx  Group.tsx  Listener.tsx  Message.tsx  Typing.tsx  UserService.tsx  Window.tsx  helper.ts  index.ts  messengerTypes.ts  mock_data.ts  tauri_types.ts  types.ts  useAccountExport.ts  useAccountList.ts  useAccounts.ts  useAppearanceSettings.ts  useAuth.ts  useChats.ts  useComposeState.ts  useContacts.ts  useGroupInfo.ts  useGroups.ts  useListener.ts  useMessageActions.tsx  useMessages.ts  useMessengerState.tsx  useNotificationSettings.ts  useSendMessage.ts
ui/hooks/voice/: useVoiceChat.ts  worker.js  worker.ts
ui/hooks/voice/crypto/: constants.ts  groupCryptoManager.ts  hkdf.ts  index.ts  receiverRatchet.ts  senderRatchet.ts
ui/hooks/voice/services/: GrpcSignalingAdapter.ts  MediaDeviceDetector.ts  MediaManager.ts  MediasoupService.ts  MicrophoneController.ts  SilenceGenerator.ts  VoiceSessionManager.ts  WebRTCConnectionManager.ts  WorkerManager.ts
ui/hooks/voice/types/: mediasoup.ts  proto.ts
ui/hooks/voice/utils/: codecTypes.ts  encodedStreamsTransform.ts  rtpCapabilities.ts
ui/stores/: settingsStore.ts
ui/themes/: themes.ts
ui/types/: chat.ts  settings.ts  theme.ts
ui/types/invoke/: group.ts
ui/utils/: bytesToNumber.ts  dateUtils.ts  mimeUtils.ts  safeLocalStorage.ts  tauriInterface.ts  themeManager.ts
(+3 files in other folders)
