[package]
name = "ship"
version = "0.2.0"
edition = "2024"

[dependencies]
# Asynchronous runtime & utilities
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
tonic = "0.14.2"
prost = "0.14.1"
prost-types = "0.13.5"

# Serialization / Deserialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_bytes = "0.11.17"
zerocopy = { version = "0.8.26", features = ["derive"] }

# Logging
log = "0.4.27"
env_logger = "0.11.8"

# Cryptography
sha2 = "0.10.9"
hkdf = "0.12.4"
aes-gcm = "0.10.3"
rand = "0.9.2"

# MLS (Message Layer Security)
mls-rs = { version = "0.50.1", features = ["sqlite", "self_remove_proposal", "last_resort_key_package_ext"] }
mls-rs-codec = "0.7.0"
mls-rs-core = "0.24.0"
mls-rs-crypto-rustcrypto = "0.19.0"
mls-rs-provider-sqlite = "0.19.0"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }

# Utilities
hex = "0.4.3"
base64 = "0.22.1"
dirs = "6.0.0"
lazy_static = "1.5.0"
anyhow = "1.0"
thiserror = "2.0.16"
uuid = { version = "1.18.0", features = ["v4"] }

# Tauri (GUI framework)
tauri = { version = "2.8.2", features = [] }
tauri-plugin-fs = "2.4.2"
tauri-plugin-dialog = "2.3.3"
moka = { version = "0.12.10", features = ["future"] }

[build-dependencies]
tonic-build = "0.13.1"
tauri-build = { version = "2.4.0", features = [] }

[lib]
name = "ship_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
