[package]
name = "ship"
version = "0.2.0"
edition = "2024"

[dependencies]
# Asynchronous runtime & utilities
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"

# Connection 
tonic = "0.14.3"
tonic-prost = "0.14.3"
prost = "0.14.3"
prost-types = "0.14.3"
tonic-h3 = { version="0.0.5" , default-features = false, features = ["quinn"] }
aws-lc-rs = { version = "1.13.1", default-features = false, features = ["prebuilt-nasm", "aws-lc-sys"] } 
quinn = {version = "0.11.9",  default-features = false, features = ["runtime-tokio", "aws-lc-rs", "rustls-aws-lc-rs"] }
rustls = { version =  "=0.23.31", features = ["aws_lc_rs"] }

# Serialization / Deserialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_bytes = "0.11.17"
zerocopy = { version = "0.8.26", features = ["derive"] }

# Logging
log = "0.4.29"
env_logger = "0.11.8"

# Cryptography
sha2 = "0.10.9"
hkdf = "0.12.4"
aes-gcm = "0.10.3"
rand = "0.9.2"

# MLS (Message Layer Security)
mls-rs = { version = "0.51.0", features = ["sqlite", "self_remove_proposal", "last_resort_key_package_ext"] }
mls-rs-codec = "0.7.0"
mls-rs-core = "0.24.0"
mls-rs-crypto-awslc = "0.19.0"
mls-rs-provider-sqlite = { version = "0.19.0", default-features = false, features = ["sqlite-bundled"] }

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }

# Utilities
hex = "0.4.3"
base64 = "0.22.1"
dirs = "6.0.0"
lazy_static = "1.5.0"
anyhow = "1.0"
thiserror = "2.0.16"
uuid = { version = "1.18.0", features = ["v4"] }

# Tauri (GUI framework)
tauri = { version = "2.10.0", features = [] }
tauri-plugin-fs = "2.4.5"
tauri-plugin-dialog = "2.6.0"
moka = { version = "0.12.13", features = ["future"] }

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0.2"

[build-dependencies]
tonic-prost-build = "0.14.3"
tauri-build = { version = "2.5.4", features = [] }

[lib]
name = "ship_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
