[package]
name = "ship"
version = "0.2.0"
edition = "2024"

[dependencies]
# Asynchronous runtime & utilities
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = "0.1.18"

# Connection 
tonic = "0.14.5"
tonic-prost = "0.14.5"
prost = "0.14.3"
prost-types = "0.14.3"
tonic-h3 = { version="0.0.5" , default-features = false, features = ["quinn"] }
aws-lc-rs = { version = "1.16.2", default-features = false, features = ["prebuilt-nasm", "aws-lc-sys"] } 
quinn = {version = "0.11.9",  default-features = false, features = ["runtime-tokio", "aws-lc-rs", "rustls-aws-lc-rs"] }
rustls = { version =  "=0.23.31", features = ["aws_lc_rs"] }

# Serialization / Deserialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_bytes = "0.11.19"
zerocopy = { version = "0.8.47", features = ["derive"] }

# Logging
log = "0.4.29"
env_logger = "0.11.10"

# Cryptography
sha2 = "0.10.8"
hkdf = "0.13.0"
aes-gcm = "0.10.3"
rand = "0.10.0"

# MLS (Message Layer Security)
mls-rs = { version = "0.55.0", features = ["sqlite", "self_remove_proposal", "last_resort_key_package_ext"] }
mls-rs-codec = "0.7.0"
mls-rs-core = "0.27.0"
mls-rs-crypto-awslc = "0.25.0"
mls-rs-provider-sqlite = { version = "0.23.0", default-features = false, features = ["sqlite-bundled"] }

# Database
sqlx = { version = "=0.9.0-alpha.1", features = ["runtime-tokio", "sqlite"] }

# Utilities
hex = "0.4.3"
base64 = "0.22.1"
dirs = "6.0.0"
lazy_static = "1.5.0"
thiserror = "2.0.18"
uuid = { version = "1.23.0", features = ["v4"] }

# Tauri (GUI framework)
tauri = { version = "2.10.3", features = [] }
tauri-plugin-fs = "2.4.5"
tauri-plugin-dialog = "2.6.0"
moka = { version = "0.12.15", features = ["future"] }
rustls-platform-verifier = "0.6.2"
blake3 = "1.8.5"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0.2"

[build-dependencies]
tonic-prost-build = "0.14.5"
tauri-build = { version = "2.5.6", features = [] }
tauri-typegen = "0.5.0"

[lib]
name = "ship_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[patch.crates-io]
tauri-typegen = { git = "https://github.com/ap-apely/tauri-typegen.git", branch = "event-dirpath-fix" }
